--- a/flasksite/templates/layout.html
+++ b/flasksite/templates/layout.html
@@ -31,7 +31,7 @@
             <div class="navbar-nav">
                 {% if current_user.is_authenticated %}
                     <a class="nav-item nav-link" href="{{ url_for('new_packing') }}">New Packing</a>
-                    <a class="nav-item nav-link" href="{{ url_for('packings') }}">My Packings</a>
+                    <a class="nav-item nav-link" href="{{ url_for('new_container') }}">My Packings</a>
                     <a class="nav-item nav-link" href="{{ url_for('new_container') }}">New container</a>
                     <a class="nav-item nav-link" href="{{ url_for('new_post') }}">New Post</a>
                     <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
