--- a/flasksite/templates/packings.html
+++ b/flasksite/templates/packings.html
@@ -2,13 +2,12 @@
 {% block content %}
     {% for packing in packings %}
         <article class="media content-section">
-            <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + post.author.image_file) }}">
             <div class="media-body">
                 <div class="article-metadata">
-                    <a class="mr-2" href="#">{{ packing.author.username }}</a>
+                    <a class="mr-2" href="#">{{ packing.user_id.username }}</a>
                     <small class="text-muted">{{ packing.date_created.strftime('%Y-%m-%d') }}</small>
                 </div>
-                <h2><a class="article-title" href="{{ url_for('post', packing_id=packing.id) }}">{{ packing.name }}</a></h2>
+                <h2><a class="article-title" href="{{ url_for('packings') }}">{{ packing.name }}</a></h2>
             </div>
         </article>
     {% endfor %}
