--- a/flasksite/templates/layout.html
+++ b/flasksite/templates/layout.html
@@ -30,6 +30,7 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
                 {% if current_user.is_authenticated %}
+                    <a class="nav-item nav-link" href="{{ url_for('new_box') }}">New Box</a>
                     <a class="nav-item nav-link" href="{{ url_for('new_packing') }}">New Packing</a>
                     <a class="nav-item nav-link" href="{{ url_for('packings') }}">My Packings</a>
                     <a class="nav-item nav-link" href="{{ url_for('new_container') }}">New container</a>
