--- a/flasksite/templates/packings.html
+++ b/flasksite/templates/packings.html
@@ -4,9 +4,10 @@
         <article class="media content-section">
             <div class="media-body">
                 <div class="article-metadata">
-                    <a class="mr-2" href="#">{{ packing.user_id.username }}</a>
+                    <a class="mr-2" href="#">{{ packing.user_id }}</a>
                     <small class="text-muted">{{ packing.date_created.strftime('%Y-%m-%d') }}</small>
                 </div>
+                <a class="mr-2" href="#">{{ packing.author }}</a>
                 <h2><a class="article-title" href="{{ url_for('packings') }}">{{ packing.name }}</a></h2>
             </div>
         </article>
