container objects accessible

--- a/flasksite/templates/create_packing.html
+++ b/flasksite/templates/create_packing.html
@@ -4,7 +4,7 @@
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">New Container</legend>
+                <legend class="border-bottom mb-4">New Packing</legend>
 
                 <div class="form-group">
                     {{ form.name.label(class="form-control-label") }}
@@ -25,6 +25,7 @@
             <div class="form-group">
                 {{ form.submit(class="btn btn-outline-info") }}
             </div>
+
         </form>
     </div>
 {% endblock content %}
