--- a/flasksite/static/main.css
+++ b/flasksite/static/main.css
@@ -78,3 +78,15 @@ a.article-title:hover {
 .account-heading {
   font-size: 2.5rem;
 }
+
+.column {
+    float: left;
+    width: 50%;
+}
+
+/* Clear floats after the columns */
+.container:after {
+    content: "";
+    display: table;
+    clear: both;
+}
