--- a/flasksite/templates/create_container.html
+++ b/flasksite/templates/create_container.html
@@ -63,87 +63,17 @@
                     {% endif %}
                 </div>
                 <div class="form-group">
-                    {{ form.weight.label(class="form-control-label") }}
-                    {% if form.weight.errors %}
-                        {{ form.weight(class="form-control form-control-lg is-invalid") }}
+                    {{ form.max_weight.label(class="form-control-label") }}
+                    {% if form.max_weight.errors %}
+                        {{ form.max_weight(class="form-control form-control-lg is-invalid") }}
                         <div class="invalid-feedback">
-                            {% for error in form.weight.errors %}
+                            {% for error in form.max_weight.errors %}
                                 <span>{{ error }}</span>
                             {% endfor %}
 
                         </div>
                     {% else %}
-                        {{ form.weight(class="form-control form-control-lg") }}
-                    {% endif %}
-                </div>
-                <div class="form-group">
-                    {{ form.r_x.label(class="form-control-label") }}
-                    {% if form.r_x.errors %}
-                        {{ form.r_x(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.r_x.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-
-                        </div>
-                    {% else %}
-                        {{ form.r_x(class="form-control form-control-lg") }}
-                    {% endif %}
-                </div>
-                <div class="form-group">
-                    {{ form.r_y.label(class="form-control-label") }}
-                    {% if form.r_y.errors %}
-                        {{ form.r_y(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.r_y.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-
-                        </div>
-                    {% else %}
-                        {{ form.r_y(class="form-control form-control-lg") }}
-                    {% endif %}
-                </div>
-                <div class="form-group">
-                    {{ form.r_z.label(class="form-control-label") }}
-                    {% if form.r_z.errors %}
-                        {{ form.r_z(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.r_z.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-
-                        </div>
-                    {% else %}
-                        {{ form.r_z(class="form-control form-control-lg") }}
-                    {% endif %}
-                </div>
-                <div class="form-group">
-                    {{ form.up.label(class="form-control-label") }}
-                    {% if form.up.errors %}
-                        {{ form.up(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.up.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-
-                        </div>
-                    {% else %}
-                        {{ form.up(class="form-control form-control-lg") }}
-                    {% endif %}
-                </div>
-            <div class="form-group">
-                    {{ form.down.label(class="form-control-label") }}
-                    {% if form.down.errors %}
-                        {{ form.down(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.down.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-
-                        </div>
-                    {% else %}
-                        {{ form.down(class="form-control form-control-lg") }}
+                        {{ form.max_weight(class="form-control form-control-lg") }}
                     {% endif %}
                 </div>
             </fieldset>
