--- a/flasksite/templates/packings.html
+++ b/flasksite/templates/packings.html
@@ -9,6 +9,7 @@
                 </div>
                 <a class="mr-2" href="#">{{ packing.author }}</a>
                 <h2><a class="article-title" href="{{ url_for('packing', packing_id=packing.id) }}">{{ packing.name }}</a></h2>
+                <a class="mr-2" href="#">{{ packing.containers }}</a>
             </div>
         </article>
     {% endfor %}
