--- a/flasksite/templates/plan_1.html
+++ b/flasksite/templates/plan_1.html
@@ -8,8 +8,6 @@
     <h1>{{ containers_ordered.y }}</h1>
     <h1>{{ containers_ordered.z }}</h1>
     <body>
-        <script type="text/javascript" src="/static/main.js"></script>
-        <script src="https://threejs.org/build/three.js"></script>
-        <script type="text/javascript" src="/static/cubes.js"></script>
+        <!--<script src="https://threejs.org/build/three.js"></script>-->
 	</body>
 {% endblock content %}
