--- a/flasksite/templates/about.html
+++ b/flasksite/templates/about.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
 {% block content %}
     <h1>About P  ag e</h1>
-    <body><script type="text/javascript" src="/static/main.js"></script></body>
+    <body><script type="text/javascript" src="/scripts/main.js"></script></body>
 {% endblock content %}
