--- a/flasksite/templates/plan_1.html
+++ b/flasksite/templates/plan_1.html
@@ -7,6 +7,7 @@
     <h1>{{ containers_ordered.x }}</h1>
     <h1>{{ containers_ordered.y }}</h1>
     <h1>{{ containers_ordered.z }}</h1>
+    <div><a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('results', packing_id=packing_id) }}">Results</a></div>
     <body>
         <!--<script src="https://threejs.org/build/three.js"></script>-->
 	</body>
