algorithm seems to be working

--- a/flasksite/templates/container_instance.html
+++ b/flasksite/templates/container_instance.html
@@ -2,7 +2,7 @@
 {% block content %}
     <h2 class="article-title">{{ instance_id }}</h2>
     <p class="article-content">Number of boxes packed:   {{ number_of_boxes }}</p>
-    <p class="article-content">Weight remaining:   {{ weight_remaining }} %</p>
+    <p class="article-content">Weight remaining:   {{ weight_remaining }} kg</p>
     <p class="article-content">Space remaining:   {{ space_remaining }} %</p>
     <p class="article-content">Space occupied:   {{ 100-space_remaining }} %</p>
     <body>
