--- a/flasksite/templates/results.html
+++ b/flasksite/templates/results.html
@@ -3,9 +3,11 @@
     <h2 class="article-title">Results</h2>
     <p class="article-content">Number of containers used:   {{ containers_used }}</p>
     <p class="article-content">Number of boxes packed:   {{ boxes_packed }}</p>
-    <p class="article-content">Total weight:   {{ total_weight }}</p>
-    <p class="article-content">Average weight in a container:   {{ average_weight }}</p>
+    <p class="article-content">Total weight:   {{ total_weight }} kg</p>
+    <p class="article-content">Average weight in a container:   {{ average_weight }} kg</p>
     <p class="article-content">Average number of boxes:   {{ average_box_n }}</p>
+    <p class="article-content">Minimum space remaining:   {{ min_space }} %</p>
+    <p class="article-content">Maximum space remaining:   {{ max_space }} %</p>
     {% for container in container_instances %}
         <article class="media content-section">
             <div class="media-body">
