--- a/flasksite/templates/container_instance_original.html
+++ b/flasksite/templates/container_instance_original.html
@@ -9,9 +9,9 @@
         <script src="http://threejs.org/build/three.min.js"></script>
         <script src="http://threejs.org/examples/js/loaders/STLLoader.js"></script>
         <script src="{{ url_for('static', filename='node_modules/three/build/three.js')}}"></script>
-        <script src="{{ url_for('static', filename='OrbitControls.js')}}"></script>
+        <script src="{{ url_for('static', filename='OrbitControls1.js')}}"></script>
         <script type=module src="{{ url_for('static', filename='node_modules/three/examples/jsm/loaders/OBJLoader.js')}}"></script>
-        <script type=module src="{{ url_for('static', filename='node_modules/three-orbitcontrols/OrbitControls.js')}}"></script>
+        <script type=module src="{{ url_for('static', filename='node_modules/three-orbit-controls/OrbitControls.js')}}"></script>
         <script type=module src="{{ url_for('static', filename='node_modules/requirejs/require.js')}}"></script>
         <script type=module src="https://unpkg.com/three@0.85.0/examples/js/controls/OrbitControls.js"></script>
 
@@ -59,7 +59,7 @@
             var renderer = new THREE.WebGLRenderer();
             renderer.setSize( window.innerWidth, window.innerHeight );
             document.body.appendChild( renderer.domElement );
-            //var cameraControls = OrbitControls(this.camera, this.renderer.domElement);
+            var cameraControls = OrbitControls(this.camera, this.renderer.domElement);
             //var controls = new OrbitControls(camera, renderer.domElement);
             //controls.enableDamping = true; // an animation loop is required when either damping or auto-rotation are enabled
             //controls.dampingFactor = 0.05;
